[GraphQL] Format codegen

--- a/graphql-service/apollo/package.json
+++ b/graphql-service/apollo/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "gen": "graphql-codegen --config codegen.yml",
+    "gen": "graphql-codegen --config codegen.yml && prettier -w ./__generated__",
     "build": "npm run gen && tsc",
     "start": "node --experimental-specifier-resolution=node ./dist/devserver.js",
     "watch": "npx nodemon -e yml,ts,graphql,json -i ./__generated__ --signal SIGINT -x \"npm run build && npm run start || exit 1\"",
