--- a/graphql-service/apollo/codegen.yml
+++ b/graphql-service/apollo/codegen.yml
@@ -1,7 +1,7 @@
 # This configuration file tells GraphQL Code Generator how
 # to generate types based on our schema.
 # documents:
-#   - "./resolvers/*.ts"
+#   - "./cron-jobs/*.ts"
 schema: "./schema/App.graphql"
 generates:
   # Specify where our generated types should live.
@@ -41,3 +41,14 @@ generates:
       scalars:
         Email: string
         Timestamp: number
+  ./__generated__/operation-types.ts:
+    plugins:
+      - "typescript"
+      - "typescript-operations"
+    documents:
+      - "./cron-jobs/*.ts"  
+    config:
+      scalars:
+        Email: string
+        Timestamp: number
+      typesPrefix: GQL
