--- a/graphql-service/apollo/package.json
+++ b/graphql-service/apollo/package.json
@@ -21,14 +21,16 @@
     "@as-integrations/aws-lambda": "^2.0.0",
     "@aws-sdk/client-dynamodb": "^3.258.0",
     "@aws-sdk/client-sqs": "^3.272.0",
+    "@aws-sdk/util-dynamodb": "^3.288.0",
     "@aws/dynamodb-data-mapper": "^0.7.3",
     "@aws/dynamodb-data-mapper-annotations": "^0.7.3",
-    "@graphql-codegen/typescript-operations": "^3.0.0",
     "@types/uuid": "^9.0.1",
     "chalk": "^5.2.0",
     "dataloader": "^2.1.0",
     "decimal.js-light": "^2.5.1",
-    "dynamoose": "^3.1.0",
+    "dynamoose": "github:ylilarry/dynamoose#dist",
+    "dynamoose-utils": "^3.1.0",
+    "dynamoose-logger": "^3.1.0",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.20.1",
     "jsonwebtoken": "^9.0.0",
@@ -43,6 +45,7 @@
     "@graphql-codegen/client-preset": "^2.0.0",
     "@graphql-codegen/typescript": "^2.8.7",
     "@graphql-codegen/typescript-resolvers": "^2.7.12",
+    "@graphql-codegen/typescript-operations": "^3.0.0",
     "@jest/globals": "^29.4.3",
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
@@ -50,7 +53,6 @@
     "@types/node": "^18.11.18",
     "@types/object-hash": "^3.0.2",
     "babel-jest": "^29.4.3",
-    "dynamoose-logger": "^3.1.0",
     "jest": "^29.4.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
