--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -7,11 +7,57 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "sam build",
+    "gen": "graphql-codegen --config codegen.yml && prettier -w ./__generated__",
+    "build": "npm run gen && sam build",
     "deploy": "npm run build && sam deploy",
     "stripe": "stripe listen --forward-to https://api.payment.fastchargeapi.com/accept -e 'checkout.session.completed,checkout.session.expired,checkout.session.async_payment_succeeded,checkout.session.async_payment_failed' & stripe listen --forward-to https://api.payment.fastchargeapi.com/onboard/accept -e 'account.updated'",
     "logs": "sam logs --stack-name payment-service --tail"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@apollo/client": "^3.7.9",
+    "@apollo/server": "^4.3.1",
+    "@as-integrations/aws-lambda": "^2.0.0",
+    "@aws-sdk/client-dynamodb": "^3.258.0",
+    "@aws-sdk/client-sqs": "^3.272.0",
+    "@aws-sdk/util-dynamodb": "^3.288.0",
+    "@aws/dynamodb-data-mapper": "^0.7.3",
+    "@aws/dynamodb-data-mapper-annotations": "^0.7.3",
+    "@types/uuid": "^9.0.1",
+    "chalk": "^5.2.0",
+    "dataloader": "^2.1.0",
+    "decimal.js-light": "^2.5.1",
+    "dynamoose": "github:ylilarry/dynamoose#dist",
+    "dynamoose-logger": "^3.1.0",
+    "dynamoose-utils": "^3.1.0",
+    "graphql": "^16.6.0",
+    "graphql-scalars": "^1.20.1",
+    "graphql-service": "file:../graphql-service/apollo",
+    "jsonwebtoken": "^9.0.0",
+    "object-hash": "^3.0.0",
+    "stripe": "^11.14.0",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@graphql-codegen/cli": "^2.16.5",
+    "@graphql-codegen/client-preset": "^2.0.0",
+    "@graphql-codegen/typescript": "^2.8.7",
+    "@graphql-codegen/typescript-operations": "^3.0.0",
+    "@graphql-codegen/typescript-resolvers": "^2.7.12",
+    "@jest/globals": "^29.4.3",
+    "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.11.18",
+    "@types/object-hash": "^3.0.2",
+    "babel-jest": "^29.4.3",
+    "jest": "^29.4.3",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
+  }
 }
