--- a/graphql-service/apollo/package.json
+++ b/graphql-service/apollo/package.json
@@ -29,8 +29,8 @@
     "dataloader": "^2.1.0",
     "decimal.js-light": "^2.5.1",
     "dynamoose": "github:ylilarry/dynamoose#dist",
-    "dynamoose-utils": "^3.1.0",
     "dynamoose-logger": "^3.1.0",
+    "dynamoose-utils": "^3.1.0",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.20.1",
     "jsonwebtoken": "^9.0.0",
@@ -44,8 +44,8 @@
     "@graphql-codegen/cli": "^2.16.5",
     "@graphql-codegen/client-preset": "^2.0.0",
     "@graphql-codegen/typescript": "^2.8.7",
-    "@graphql-codegen/typescript-resolvers": "^2.7.12",
     "@graphql-codegen/typescript-operations": "^3.0.0",
+    "@graphql-codegen/typescript-resolvers": "^2.7.12",
     "@jest/globals": "^29.4.3",
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
@@ -53,6 +53,7 @@
     "@types/node": "^18.11.18",
     "@types/object-hash": "^3.0.2",
     "babel-jest": "^29.4.3",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^29.4.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
