--- a/react/fastchargeapi/package.json
+++ b/react/fastchargeapi/package.json
@@ -54,7 +54,8 @@
     "@types/uuid": "^9.0.1",
     "react-scripts": "^5.0.1",
     "@graphql-codegen/cli": "^3.2.1",
-    "@graphql-codegen/typescript-operations": "^3.0.1"
+    "@graphql-codegen/typescript-operations": "^3.0.1",
+    "prettier": "^2.7.1"
   },
   "eslintConfig": {
     "extends": [
