--- a/react/fastchargeapi/package.json
+++ b/react/fastchargeapi/package.json
@@ -43,6 +43,8 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^3.2.1",
+    "@graphql-codegen/typescript-operations": "^3.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -52,10 +54,8 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-router-hash-link": "^2.4.5",
     "@types/uuid": "^9.0.1",
-    "react-scripts": "^5.0.1",
-    "@graphql-codegen/cli": "^3.2.1",
-    "@graphql-codegen/typescript-operations": "^3.0.1",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "react-scripts": "^5.0.1"
   },
   "eslintConfig": {
     "extends": [
