--- a/payment-service/.aws-sam/build.toml
+++ b/payment-service/.aws-sam/build.toml
@@ -8,7 +8,7 @@ architecture = "arm64"
 handler = "checkout.lambda_handler"
 manifest_hash = ""
 packagetype = "Zip"
-functions = ["StripeCheckoutSession", "StripeConnectOnboardAcceptWebhook", "AcceptPaymentWebhook", "GetDashboardLoginLink", "Payout"]
+functions = ["StripeConnectOnboardAcceptWebhook", "AcceptPaymentWebhook", "Payout"]
 
 [function_build_definitions.3a53b7f2-d9d9-49bc-8051-59deed0db72f]
 codeuri = "/Users/yu/lab/FastchargeAPI/payment-service/cron-jobs"
@@ -25,6 +25,243 @@ BuildMethod = "esbuild"
 [function_build_definitions.3a53b7f2-d9d9-49bc-8051-59deed0db72f.metadata.BuildProperties]
 Target = "es2022"
 EntryPoints = ["ExecuteDailyStripeTransfer.ts"]
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -168,6 +405,243 @@ EntryPoints = ["SendStripeDashboardLink.ts"]
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 [function_build_definitions.8fe569a5-19b2-46f9-9eee-9bf247b28245]
 codeuri = "/Users/yu/lab/FastchargeAPI/payment-service/handlers"
 runtime = "nodejs18.x"
@@ -183,6 +657,405 @@ BuildMethod = "esbuild"
 [function_build_definitions.8fe569a5-19b2-46f9-9eee-9bf247b28245.metadata.BuildProperties]
 Target = "es2022"
 EntryPoints = ["GetOnBoardLink.ts"]
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+[function_build_definitions.9509fe24-1293-4237-9e66-ebce61cbe97f]
+codeuri = "/Users/yu/lab/FastchargeAPI/payment-service/handlers"
+runtime = "nodejs18.x"
+architecture = "arm64"
+handler = "AcceptPayment.lambdaHandler"
+manifest_hash = ""
+packagetype = "Zip"
+functions = ["AcceptPayment"]
+
+[function_build_definitions.9509fe24-1293-4237-9e66-ebce61cbe97f.metadata]
+BuildMethod = "esbuild"
+
+[function_build_definitions.9509fe24-1293-4237-9e66-ebce61cbe97f.metadata.BuildProperties]
+Target = "es2022"
+EntryPoints = ["AcceptPayment.ts"]
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+[function_build_definitions.2da3c822-e3af-4d84-b57d-83c8ccb5a99e]
+codeuri = "/Users/yu/lab/FastchargeAPI/payment-service/handlers"
+runtime = "nodejs18.x"
+architecture = "arm64"
+handler = "GetCheckoutLink.lambdaHandler"
+manifest_hash = ""
+packagetype = "Zip"
+functions = ["GetCheckoutLink"]
+
+[function_build_definitions.2da3c822-e3af-4d84-b57d-83c8ccb5a99e.metadata]
+BuildMethod = "esbuild"
+
+[function_build_definitions.2da3c822-e3af-4d84-b57d-83c8ccb5a99e.metadata.BuildProperties]
+Target = "es2022"
+EntryPoints = ["GetCheckoutLink.ts"]
+
+
+
 
 
 [layer_build_definitions]
