--- a/payment-service/codegen.yml
+++ b/payment-service/codegen.yml
@@ -1,7 +1,8 @@
 # This configuration file tells GraphQL Code Generator how
 # to generate types based on our schema.
-# documents:
-#   - "./**/*.ts"
+documents:
+  - "./handlers/**/*.ts"
+  - "./utils/**/*.ts"
 schema: "../graphql-service/apollo/schema/App.graphql"
 generates:
   # Specify where our generated types should live.
@@ -13,6 +14,3 @@ generates:
       typesPrefix: GQL
       scalars:
         Timestamp: number
-        
-
-      
