--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "This project contains source code and supporting files for a serverless application that you can deploy with the SAM CLI. It includes the following files and folders.",
   "main": "index.js",
+  "module": "node",
   "directories": {
     "test": "tests"
   },
@@ -10,8 +11,12 @@
     "gen": "graphql-codegen --config codegen.yml && prettier -w ./__generated__",
     "build": "npm run gen && sam build",
     "deploy": "npm run build && sam deploy",
-    "stripe": "stripe listen --forward-to https://api.payment.fastchargeapi.com/accept -e 'checkout.session.completed,checkout.session.expired,checkout.session.async_payment_succeeded,checkout.session.async_payment_failed' & stripe listen --forward-to https://api.payment.fastchargeapi.com/onboard/accept -e 'account.updated'",
-    "logs": "sam logs --stack-name payment-service --tail"
+    "stripe": "stripe listen --forward-to https://api.v2.payment.fastchargeapi.com/accept-payment -e 'checkout.session.completed,checkout.session.expired,checkout.session.async_payment_succeeded,checkout.session.async_payment_failed' & stripe listen --forward-to https://api.v2.payment.fastchargeapi.com/onboard/accept -e 'account.updated'",
+    "logs": "sam logs --stack-name payment-service --tail",
+    "start": "npm run build && sam local start-api -p 3000 --warm-containers lazy",
+    "watch": "nodemon -e ts,graphql,yml,yaml -i __generated__ --signal SIGINT -x 'npm run start || exit 1'",
+    "test": "jest --runInBand",
+    "fix": "eslint --fix ./"
   },
   "author": "",
   "license": "ISC",
@@ -55,6 +60,7 @@
     "@types/node": "^18.11.18",
     "@types/object-hash": "^3.0.2",
     "babel-jest": "^29.4.3",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^29.4.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
